@@ -1,0 +1,2 @@
+<?xml version="1.0" ?>
+<Font Name="Tahoma-10" Filename="cegui/datafiles/fonts/tahoma.ttf" AntiAlias="true" Type="Dynamic" Size="10" NativeHorzRes="1024" NativeVertRes="768" AutoScaled="false" FirstCodepoint="1" LastCodepoint="300"  /> 
