@@ -1,5 +1,5 @@
 <?xml version="1.0" ?>
-<Imageset Name="TaharezLook" Imagefile="gui/TaharezLook.png" NativeHorzRes="1024" NativeVertRes="764" AutoScaled="true">
+<Imageset Name="TaharezLook" Imagefile="gui/TaharezLook.png" NativeHorzRes="1024" NativeVertRes="768" AutoScaled="false">
 	<Image Name="ClientBrush" XPos="2" YPos="2" Width="64" Height="64" />
 	<Image Name="WindowLeftEdge" XPos="6" YPos="95" Width="1" Height="22" XOffset="4" />
 	<Image Name="WindowRightEdge" XPos="34" YPos="95" Width="1" Height="22" XOffset="-4" />
