@@ -2,6 +2,7 @@
 <GUIScheme Name="TaharezLook">
 	<Imageset Name="TaharezLook" Filename="cegui/datafiles/imagesets/TaharezLook.imageset" />
 	<Font Name="Tahoma-14" Filename="cegui/datafiles/fonts/tahoma-14.xml" />
+	<Font Name="Tahoma-10" Filename="cegui/datafiles/fonts/tahoma-10.xml" />
 	<Font Name="Tahoma-8" Filename="cegui/datafiles/fonts/tahoma-8.xml" />
 	<WindowSet Filename="CEGUITaharezLook">
 		<WindowFactory Name="TaharezLook/AlternateProgressBar" />
